--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,19 +13,15 @@ body {
 
 }
 
-  div {
-
- 
-}
-
     .topsection, .middlesection, .bottomsection {
-      height: 36px;
+      height: 38px;
       overflow: hidden; 
+      transition: height 1s;
     
   }
 
     .grow {
-      height: 180px;
+      height: 195px;
       overflow: hidden;
   }
 
@@ -56,5 +52,6 @@ body {
   color: #BCBCBC;
   padding-left: 15px;
   padding-right: 20px;
+  color: blue;
 
 }
