--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,36 +1,35 @@
+/*
 $headercolor: #5C85FF;
 $paragraphtext: #BCBCBC;
+*/
 
 body {
   border: 2px solid line black;
-
 }
 
 .container {
   width: 500px;
   border: 2px solid #3E3ECC;
-  height: 600px;
+  height: 256px;
 
 }
 
-    .topsection, .middlesection, .bottomsection {
-      height: 38px;
-      overflow: hidden; 
-      transition: height 1s;
-    
-  }
+.section {
+  height: 38px;
+  overflow: hidden;
+  transition: height 1s;
+}
 
-    .grow {
-      height: 195px;
-      overflow: hidden;
-  }
+.grow {
+  height: 180px;
+  overflow: hidden;
+}
 
-      a {
-        text-decoration: none;
-  }
+a {
+  text-decoration: none;
+}
 
-
-  h2 {
+h2 {
   color: white;
   background-color: #5C85FF;
   padding-top: 0px;
@@ -38,20 +37,31 @@ body {
   border-top: 1px solid #3E3ECC;
   height: 40px;
   margin: 0;
-
 }
 
-
-  h2:hover {
-    background-color: #AFC4FF;
-
-
+h2:hover {
+  background-color: #AFC4FF;
 }
 
-  p {
+p {
   color: #BCBCBC;
   padding-left: 15px;
   padding-right: 20px;
-  color: blue;
-
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
